--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,53 @@
 body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+    margin: 0;
+    font-family: "Poppins", sans-serif;
+    font-style: normal;
+  }
+
+  .header-title {
+    text-align: center;
+    font-weight: 900;
+    font-size: 47px;
+    color: #313131;
+  }
+
+.mod {
+    width: 800px;
+    height: 400px;
+    border: 1px solid #dadada;
+    border-radius: 15px;
+    box-shadow: inset 1px 2px 33px -15px rgba(66, 68, 90, 1);
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.week div {
+    margin-right: 3em;
 }
+
+.weekdays:hover {
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;
+    background-color: #4f8dde;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.weekend {
+    color: #a3a3a3;
+}
+
+.weekend:hover {
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;
+    background-color: #c8e0ff;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.line {
+    border-bottom: 1px solid #dadada;
+}
+
