--- a/src/index.css
+++ b/src/index.css
@@ -23,7 +23,7 @@ body {
     margin-right: 3em;
 }
 
-.weekdays:hover {
+.weekdays {
     width: 50px;
     height: 50px;
     border-radius: 50%;
@@ -31,20 +31,18 @@ body {
     display: flex;
     align-items: center;
     justify-content: center;
+    color: #fff;
 }
 
 .weekend {
-    color: #a3a3a3;
-}
-
-.weekend:hover {
     width: 50px;
     height: 50px;
     border-radius: 50%;
-    background-color: #c8e0ff;
+    background-color: #b0d1fc;
     display: flex;
     align-items: center;
     justify-content: center;
+    color: #fff;
 }
 
 .line {
